<resources>
    <string name="app_name">Movies: Now Playing</string>

    <!-- Language Preferences -->
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_language_default" translatable="false">@string/pref_language_english</string>
    <string name="pref_language_label">Language</string>

    <string name="pref_language_label_english" translatable="false">English</string>
    <string name="pref_language_label_turkish" translatable="false">Türkçe</string>
    <string name="pref_language_label_german" translatable="false">Deutsch</string>

    <string name="pref_language_english" translatable="false">en-US</string>
    <string name="pref_language_turkish" translatable="false">tr-TR</string>
    <string name="pref_language_german" translatable="false">de-DE</string>


    <!-- Region Preferences -->
    <string name="pref_region_key" translatable="false">region</string>
    <string name="pref_region_default" translatable="false">@string/pref_region_united_states</string>
    <string name="pref_region_label">Region</string>

    <string name="pref_region_label_united_states">United States of America</string>
    <string name="pref_region_label_turkey">Turkey</string>
    <string name="pref_region_label_germany">Germany</string>

    <string name="pref_region_united_states">US</string>
    <string name="pref_region_turkey">TR</string>
    <string name="pref_region_germany">DE</string>

    <!-- Notification Day Preferences -->

    <string name="pref_notification_day_key" translatable="false">notification_day</string>
    <string name="pref_notification_day_default" translatable="false">5</string>
    <string name="pref_notification_day_label">Notification day</string>

    <string name="pref_day_label_monday">Monday</string>
    <string name="pref_day_label_tuesday">Tuesday</string>
    <string name="pref_day_label_wednesday">Wednesday</string>
    <string name="pref_day_label_thursday">Thursday</string>
    <string name="pref_day_label_friday">Friday</string>
    <string name="pref_day_label_saturday">Saturday</string>
    <string name="pref_day_label_sunday">Sunday</string>


    <string name="content_authority" translatable="false">com.figengungor.moviesnowplaying</string>
    <string name="settings">Settings</string>
    <string name="action_settings">@string/settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="movie_notification_channel_name">Weekly Movies Reminder</string>
    <string name="movie_notification_content_title">Movies: Now Playing!</string>
    <string name="movie_notification_content_text">Check out the movies now playing on theatres!</string>
    <string name="content_description_backdrop_image">Backdrop Image</string>
    <string name="content_description_poster_image">Poster Image</string>
    <string name="content_description_add_to_watchlist">Add to Watchlist</string>

    <string name="retry">Retry</string>
    <string name="no_data_found">No data found. Try again.</string>
    <string name="error_server">Server Error</string>
    <string name="empty_data_message">No Data Found</string>
    <string name="error_connection_timeout">Connection Timeout</string>
    <string name="error_no_internet_connection">No Internet Connection</string>


    <string name="poster_transition_name" translatable="false">poster</string>
    <string name="title_transition_name" translatable="false">title</string>
    <string name="releaseDate_transition_name" translatable="false">releaseDate</string>

</resources>
